# kedro-example

./: .gitignore  README.md  hooks_gallery.md
ascii_hook/: README.md  pyproject.toml
ascii_hook/src/: requirements.txt  setup.py
behave_test/features/: base.feature  environment.py
cache-dataset-example/: README.md  pyproject.toml  requirements.txt
cache-dataset-example/src/cache_dataset_example/: __init__.py  __main__.py  settings.py
chunk-process/: README.md  pyproject.toml
chunk-process/src/: setup.py
conditional-kedro-runs/: README.md  conditional_run.py  pyproject.toml
conditional-kedro-runs/src/conditional_kedro_runs/: __init__.py  __main__.py  pipeline_registry.py  settings.py
dynamic-pipeline/: README.md  pyproject.toml
dynamic-pipeline/src/: setup.py
exp_tracking/: README.md  pyproject.toml
exp_tracking/src/: requirements.txt  setup.py
ge_hook/: README.md  pyproject.toml
ge_hook/src/: setup.py
grafana_pipeline_telemetry/: README.md  pyproject.toml  run.py
grafana_pipeline_telemetry/src/: setup.py
hook-execution-order/: README.md  pyproject.toml
hook-execution-order/src/: pyproject.toml  requirements.txt
iceberg-incremental/: README.md  pyproject.toml  requirements.txt
iceberg-incremental/conf/base/: catalog.yml  parameters.yml
iceberg-incremental/notebooks/: PyIcebergDataset.ipynb  notebook.ipynb
iceberg-incremental/src/iceberg_incremental/: __init__.py  dataset.py  settings.py
iceberg-incremental/src/iceberg_incremental/pipelines/data_processing/: nodes.py  pipeline.py
incremental/: .kedro.yml  README.md  setup.cfg
incremental/src/: requirements.txt  setup.py
jupyter-debug-demo/: README.md  pyproject.toml
jupyter-debug-demo/notebooks/: Notebook Debug demo-Copy1.ipynb  Notebook Debug demo.ipynb
jupyter-debug-demo/src/: setup.py
kedro-check/: README.md  pyproject.toml
kedro-check/src/kedro_check/: __init__.py  __main__.py  hooks.py  settings.py
kedro-cli-plugin/: plugin.py  setup.py
kedro-debug-runner-demo/: README.md  pyproject.toml
kedro-debug-runner-demo/src/: requirements.txt  setup.py
kedro-generator-example/: README.md  pyproject.toml
kedro-generator-example/src/: requirements.txt  setup.py
kedro-hook-plugin/: plugin.py  setup.py
kedro-otel/: README.md  pyproject.toml  requirements.txt
kedro-otel/notebooks/: async.ipynb  demo-fail.ipynb  demo.1.ipynb  demo.ipynb  n.ipynb  new.ipynb  nok.py  pip magic.ipynb  tmp.ipynb
kedro-s3/: README.md  load_abfs.py  load_s3.py  pyproject.toml
kedro-s3/src/: requirements.txt  setup.py
kedro_cli_extension/: README.md  pyproject.toml
kedro_cli_extension/src/: setup.py
kedro_jupyter_dev/: README.md  pyproject.toml
kedro_jupyter_dev/notebooks/: Kedro Jupyter Dev Session Demo.ipynb
kedro_jupyter_dev/src/: setup.py
kedro_node_order/: README.md  pyproject.toml
kedro_node_order/notebooks/: Untitled.ipynb  netCDF.ipynb  test.nc
kedro_node_order/src/: playground.py  requirements.txt  setup.py
log_dataset_version/: README.md  pyproject.toml
log_dataset_version/src/: setup.py
loop-pipeline/: README.md  pyproject.toml
loop-pipeline/notebooks/: namespace_pipeline.ipynb
loop-pipeline/src/: requirements.txt  setup.py
memory-profile-pipeline/: README.md  pyproject.toml  requirements.txt
memory-profile-pipeline/src/memory_profile_pipeline/: __init__.py  __main__.py  settings.py
mini_kedro/: Example Notebook.ipynb  README.md  requirements.txt
modular_pipeline/: README.md  pyproject.toml
modular_pipeline/src/: setup.py
nested-resolver/: README.md  pyproject.toml
nested-resolver/conf/: README.md
nested-resolver/src/: pyproject.toml  requirements.txt
new-kedro-project/: README.md  pyproject.toml
new-kedro-project/src/: requirements.txt  setup.py
omegaconfigloader-demo/: README.md  pyproject.toml  tar_conf.tar
omegaconfigloader-demo/notebooks/: HackOmegaConfigLoader.ipynb  Untitled.ipynb
omegaconfigloader-demo/src/: requirements.txt  setup.py
partitioned-dataset/: README.md  pyproject.toml
partitioned-dataset/src/: setup.py
pip-install-hooks/: README.md  pyproject.toml
pip-install-hooks/notebooks/: Untitled.ipynb
pip-install-hooks/src/: setup.py
pyspark-iris/: README.md  pyproject.toml
pyspark-iris/src/: requirements.txt  setup.py
read-sql-template-resolver/: README.md  pyproject.toml
read-sql-template-resolver/sql/: dummy_sql.sql
read-sql-template-resolver/src/: pyproject.toml  requirements.txt  setup.py
stress-test-pipeline/: README.md  pyproject.toml
stress-test-pipeline/src/: requirements.txt  setup.py
stresstest-pipeline/: README.md  pyproject.toml
template_config_loader_demo/: README.md  pyproject.toml
update-param-with-hook/: README.md  pyproject.toml  requirements.txt
update-param-with-hook/conf/base/: parameters_data_science.yml
update-param-with-hook/src/update_param_with_hook/: __init__.py  __main__.py  settings.py
update-param-with-hook/src/update_param_with_hook/pipelines/data_processing/: pipeline.py
(+349 files in other folders)
