[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "conditional_kedro_runs"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
conditional-kedro-runs = "conditional_kedro_runs.__main__:main"

[tool.kedro]
package_name = "conditional_kedro_runs"
project_name = "conditional-kedro-runs"
kedro_init_version = "0.19.6"
tools = [ "None",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "conditional_kedro_runs.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "acae2c4114384647922025b40c507be3"
