[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_check"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-check = "kedro_check.__main__:main"

[tool.kedro]
package_name = "kedro_check"
project_name = "kedro-check"
kedro_init_version = "0.19.9"
tools = [ "None",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedro_check.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "7408115700b84080adb8a53be6a09fa5"
