[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "memory_profile_pipeline"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
memory-profile-pipeline = "memory_profile_pipeline.__main__:main"

[tool.kedro]
package_name = "memory_profile_pipeline"
project_name = "memory_profile_pipeline"
kedro_init_version = "0.19.7"
tools = [ "None",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "memory_profile_pipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
